Trying to get dir-files.html files written.

--- a/idldoc/src/templates/listing.tt
+++ b/idldoc/src/templates/listing.tt
@@ -23,6 +23,22 @@
   </head>
   
   <body>
-    <h1>[% location %]</h1>
+  	[% IF n_pro_files gt 0 %]
+    <h1>.pro files</h1>
+    	<ul>
+    		[% FOREACH f IN pro_files %]
+    		  <li></li>
+    		[% END %]
+    	</ul>
+    [% END %]
+    
+    [% IF n_sav_files gt 0 %]
+    <h1>.sav files</h1>
+    [% END %]
+    
+    [% IF n_idldoc_files %]
+    <h1>.idldoc files</h1>
+    [% END %]
+            
   </body>
 </html>
