--- a/idldoc/src/resources/listing.css
+++ b/idldoc/src/resources/listing.css
@@ -1,4 +1,5 @@
 body { font-family: Helvetica, sans-serif; font-size: 9pt; }
 
-h1 { color: red; font-size: 100%; }
-li {}
+h1 { color: red; font-weight: normal; font-size: 100%; margin-bottom: 0.5em; }
+ul { padding: 0em 1em 0em 1em; margin-top: 0; }
+li { list-style-type: none; }
