--- a/idldoc/src/resources/listing.css
+++ b/idldoc/src/resources/listing.css
@@ -1,5 +1,7 @@
-body { font-family: Helvetica, sans-serif; font-size: 9pt; }
+body { font-family: Helvetica, sans-serif; font-size: 9pt; margin: 0; }
 
-h1 { color: red; font-weight: normal; font-size: 100%; margin-bottom: 0.5em; }
-ul { padding: 0em 1em 0em 1em; margin-top: 0; }
+a:hover { background: yellow; }
+
+h1 { font-size: 100%; margin-bottom: 0.5em; padding-left: 0.5em; }
+ul { padding: 0em 1em 0em 1.5em; margin-top: 0; }
 li { list-style-type: none; }
