--- a/idldoc/src/templates/listing.tt
+++ b/idldoc/src/templates/listing.tt
@@ -27,7 +27,7 @@
     <h1>.pro files</h1>
     	<ul>
     		[% FOREACH f IN pro_files %]
-    		  <li>[% SCOPE f %][% basename %][% END %]</li>
+    		  <li>[% SCOPE f %]<a href="[% local_url %]" target="main_frame">[% basename %]</a>[% END %]</li>
     		[% END %]
     	</ul>
     [% END %]
@@ -36,7 +36,7 @@
     <h1>.sav files</h1>
       <ul>
         [% FOREACH f IN sav_files %]
-          <li>[% SCOPE f %][% basename %][% END %]</li>
+          <li>[% SCOPE f %]<a href="[% local_url %]" target="main_frame">[% basename %]</a>[% END %]</li>
         [% END %]
       </ul>    
     [% END %]
