--- a/idldoc/src/templates/profile.tt
+++ b/idldoc/src/templates/profile.tt
@@ -30,8 +30,16 @@
     
   <body onload="setTitle();">
     <h1>[% basename %]</h1>
+    <h2>[% location %]</h2>
     
     [% IF is_batch %]Batch file[% END %]
     [% IF has_main_level %]includes main-level program[% END %]
+    [% IF n_routines gt 0 %]
+      <ul>
+        [% FOREACH r IN routines %][% SCOPE r %]
+          <li>[% name %]</li>
+        [% END %][% END %]
+      </ul>
+    [% END %]
   </body>
 </html>
