Added favicon; added header/footers; improved appearance.

--- a/idldoc/src/templates/savefile.tt
+++ b/idldoc/src/templates/savefile.tt
@@ -30,7 +30,7 @@
     
   <body onload="setTitle();">
   
-    <table class="attribute">
+    <table class="attribute center">
       <tr>
         <td class="name">Filename:</td>
         <td>[% filename %]</td>
