--- a/idldoc/src/resources/listing.css
+++ b/idldoc/src/resources/listing.css
@@ -1,6 +1,8 @@
 body { font-family: Helvetica, sans-serif; font-size: 9pt; margin: 0; }
 
-a:hover { background: yellow; }
+a { text-decoration: none; }
+a:link, a:visited { color: #0000FF; }
+a:hover, a:focus { background: yellow; }
 
 h1 { font-size: 100%; margin-bottom: 0.5em; padding-left: 0.5em; }
 ul { padding: 0em 1em 0em 1.5em; margin-top: 0; }
