--- a/idldoc/src/resources/main.css
+++ b/idldoc/src/resources/main.css
@@ -1,11 +1,30 @@
-body { font-family: Helvetica, sans-serif; font-size: 9pt; }
+a { text-decoration: none; }
+a:link, a:visited { color: #0000FF; }
+a:hover, a:focus { background: yellow; border-bottom: 1px dotted #303099; }
+
+body { font-family: Helvetica, sans-serif; font-size: 10pt; margin: 0; padding: 0; }
+
+div.content { padding: 1em; }
+div.content h1, div.content h2 { font-weight:normal; color: darkred; }
+
+.center { margin-left: auto; margin-right: auto; }
 
 /* An attribute table is a vertical list of name-value pairs. */
 table.attribute { 
+  font-size: 90%; 
   background: #EFEFEF; 
   padding: 0.5em; 
   border: 1px #9F9F9F dotted; 
-  margin-left: auto;   /* centers table */
-  margin-right: auto; 
 }
 table.attribute td.name { font-weight: bold; padding-right: 1em; }
+
+/* header styles */
+div.header { padding: 2em 2em 0 2em; background: #FDD; border-bottom: 1px #CAA dotted; }
+div.header h1 { margin:0; font-weight: normal; }
+div.header h2 { margin-top: 0; font-weight: normal; font-style: italic; font-size: 100%; }
+
+/* footer styles */
+div.footer { padding: 0.5em 1em 0.5em 1em; background: #EFEFEF; border-top: 1px #AAA dotted; }
+div.footer table { font-size: 80%; width: 100%; }
+div.footer td.left {}
+div.footer td.right { text-align: right; }
