--- a/idldoc/src/templates/overview.tt
+++ b/idldoc/src/templates/overview.tt
@@ -24,16 +24,26 @@
   </head>
     
   <body onload="setTitle();">
-    <h1>Overview</h1>
+    [% INCLUDE_TEMPLATE idldoc_header_location %]
     
-      <table>
-        [% FOREACH d IN dirs %][% SCOPE d %]
-        <tr>
-          <td><a href="[% url %]dir-overview.html">[% location %]</a></td>
-          <td></td>
-        </tr>
-        [% END %][% END %]
-      </table>
+    <div class="content">
+      <h1>Overview</h1>
+    
+      <h2>Directories</h2>
+    
+        <table class="attribute">
+          [% FOREACH d IN dirs %][% SCOPE d %]
+          <tr>
+            <td><a href="[% url %]dir-overview.html">[% location %]</a></td>
+            <td></td>
+          </tr>
+          [% END %][% END %]
+        </table>
           
+      <h2>Statistics</h2>
+      
+    </div>
+    
+    [% INCLUDE_TEMPLATE idldoc_footer_location %]
   </body>
 </html>
