--- a/idldoc/src/templates/savefile.tt
+++ b/idldoc/src/templates/savefile.tt
@@ -29,49 +29,56 @@
   </head>
     
   <body onload="setTitle();">
-  
-    <table class="attribute center">
-      <tr>
-        <td class="name">Filename:</td>
-        <td>[% filename %]</td>
-      </tr>     
-      <tr>
-        <td class="name">Description:</td>
-        <td>[% description %]</td>
-      </tr>    
-      <tr>
-        <td class="name">SAV file type:</td>
-        <td>[% filetype %]</td>
-      </tr>
-      <tr>
-        <td class="name">Creation: </td>
-        <td>[% user %]@[% host %] on [% os %]/[% arch %]</td>
-      </tr>
-      <tr>
-        <td class="name">Creation date: </td>
-        <td>[% creation_date %]</td>
-      </tr>      
-      <tr>
-        <td class="name">IDL version: </td>
-        <td>[% release %]</td>
-      </tr>    
-      <tr>
-        <td class="name">Procedures: </td>
-        <td>[% n_procedure %]</td>
-      </tr>  
-      <tr>
-        <td class="name">Functions: </td>
-        <td>[% n_function %]</td>
-      </tr> 
-      <tr>
-        <td class="name">Variables: </td>
-        <td>[% n_var %]</td>
-      </tr>  
-      <tr>
-        <td class="name">System variables: </td>
-        <td>[% n_sysvar %]</td>
-      </tr>  
-    </table>
+
+    [% INCLUDE_TEMPLATE idldoc_header_location %]
     
+    <div class="content">
+      
+      <table class="attribute center">
+        <tr>
+          <td class="name">Filename:</td>
+          <td>[% filename %]</td>
+        </tr>     
+        <tr>
+          <td class="name">Description:</td>
+          <td>[% description %]</td>
+        </tr>    
+        <tr>
+          <td class="name">SAV file type:</td>
+          <td>[% filetype %]</td>
+        </tr>
+        <tr>
+          <td class="name">Creation: </td>
+          <td>[% user %]@[% host %] on [% os %]/[% arch %]</td>
+        </tr>
+        <tr>
+          <td class="name">Creation date: </td>
+          <td>[% creation_date %]</td>
+        </tr>      
+        <tr>
+          <td class="name">IDL version: </td>
+          <td>[% release %]</td>
+        </tr>    
+        <tr>
+          <td class="name">Procedures: </td>
+          <td>[% n_procedure %]</td>
+        </tr>  
+        <tr>
+          <td class="name">Functions: </td>
+          <td>[% n_function %]</td>
+        </tr> 
+        <tr>
+          <td class="name">Variables: </td>
+          <td>[% n_var %]</td>
+        </tr>  
+        <tr>
+          <td class="name">System variables: </td>
+          <td>[% n_sysvar %]</td>
+        </tr>  
+      </table>
+      
+    </div>
+    
+    [% INCLUDE_TEMPLATE idldoc_footer_location %]    
   </body>
  </html>
