--- a/idldoc/src/templates/profile.tt
+++ b/idldoc/src/templates/profile.tt
@@ -32,19 +32,30 @@
 
     [% INCLUDE_TEMPLATE idldoc_header_location %]
     
-    <div class="content">  
-      <h1>[% basename %]</h1>
-      <h2>[% location %]</h2>
+    <div class="content">
+      <h2 class="directory">[% location %]</h2>
+      <h1 class="basename">[% basename %]</h1>
     
       [% IF is_batch %]Batch file[% END %]
       [% IF has_main_level %]includes main-level program[% END %]
       [% IF n_routines gt 0 %]
-        <ul>
+        <dl class="routine-summary">
           [% FOREACH r IN routines %][% SCOPE r %]
-            <li>[% name %][% IF n_parameters gt 0 %]paramters[% END %]</li>
+            <dt>[% IF is_function %]result = [% END %][% name %][% IF n_parameters gt 0 %][% END %]</dt>
+            <dd class="small">Comments go here.</dd>
           [% END %][% END %]
-        </ul>
+        </dl>
       [% END %]
+    </div>
+
+    <h2 class="section">Class description</h2>
+    
+    <div class="content">
+    </div>
+        
+    <h2 class="section">Routines</h2>
+    
+    <div class="content">
     </div>
     
     [% INCLUDE_TEMPLATE idldoc_footer_location %]    
