--- a/idldoc/src/resources/main.css
+++ b/idldoc/src/resources/main.css
@@ -11,12 +11,13 @@ a:hover, a:focus { background: yellow; border-bottom: 1px dotted #303099; }
 h1, h2 { font-weight:normal; color: #900000; }
 .center { margin-left: auto; margin-right: auto; }
 .small { font-family: Verdana, Helvetica, sans-serif; font-size: 80%; }
+.code { font-family: "Courier New", Courier, monospace; }
 
 h1.basename { margin-top: 0; }
 h2.directory { font-size: 90%; margin-bottom: 0; }
 
-dl.routine-summary dt { font-family: "Courier New", Courier, monospace; margin-bottom: 0.25em; }
-dl.routine-summary dd { margin-bottom: 0.5em; }
+dl.routine-summary dt { margin-bottom: 0.25em; }
+dl.routine-summary dd { margin-bottom: 0.5em; margin-left: 2em; }
 
 /* An attribute table is a vertical list of name-value pairs. */
 table.attribute { 
