Starting on navbar in header; starting on help page.

--- a/idldoc/src/templates/idldoc-header.tt
+++ b/idldoc/src/templates/idldoc-header.tt
@@ -2,3 +2,12 @@
   <h1>[% title %]</h1>
   <h2>[% subtitle %]</h2>
 </div>
+
+<table class="navbar small">
+  <tr>
+    <td>Overview</td>
+    <td><a href="[% relative_root %]idldoc-help.html">Help</a></td>
+    <td>Warnings</td>
+    <td class="flexible">User/developer</td>
+  </tr>
+</table>
