--- a/idldoc/src/resources/main.css
+++ b/idldoc/src/resources/main.css
@@ -7,14 +7,16 @@ a { text-decoration: none; }
 a:link, a:visited { color: #0000FF; }
 a:hover, a:focus { background: yellow; border-bottom: 1px dotted #303099; }
 
-/* general styles */
+/* titles */
 h1, h2 { font-weight:normal; color: #900000; }
 .center { margin-left: auto; margin-right: auto; }
 .small { font-family: Verdana, Helvetica, sans-serif; font-size: 80%; }
-.code { font-family: "Courier New", Courier, monospace; }
-
 h1.basename { margin-top: 0; }
 h2.directory { font-size: 90%; margin-bottom: 0; }
+
+/* code styles */
+code { font-family: "Courier New", Courier, monospace; }
+code.listing { white-space: pre; display: block; padding: 0.5em 3em 0.5em 3em; }
 
 dl.routine-summary dt { margin-bottom: 0.25em; }
 dl.routine-summary dd { margin-bottom: 0.5em; margin-left: 2em; }
@@ -29,9 +31,12 @@ table.attribute {
 table.attribute td.name { font-weight: bold; padding-right: 1em; }
 
 /* header styles */
-div.header { padding: 2em 2em 0 2em; background: #71900B; border-bottom: 1px #384806 dotted; }
+div.header { padding: 2em 2em 0 2em; background: #71900B; border-bottom: 2px #384806 solid; }
 div.header h1 { color: white; margin:0; font-weight: normal; }
-div.header h2 { color: white; margin-top: 0; font-weight: normal; font-style: italic; font-size: 100%; }
+div.header h2 { color: white; margin-top: 0; margin-bottom 1em; font-weight: normal; font-style: italic; font-size: 100%; }
+table.navbar { background: #B0E020; margin: 0; border-bottom: 1px #384806 dotted; width: 100%; }
+table.navbar td { padding: 1px 0 1px 1em; }
+table.navbar td.flexible { width: 100%; text-align: right; }
 
 /* footer styles */
 div.footer { padding: 0.5em 1em 0.5em 1em; background: #EFEFEF; border-top: 1px #A0A0A0 dotted; }
