--- a/idldoc/src/templates/help.tt
+++ b/idldoc/src/templates/help.tt
@@ -18,7 +18,7 @@
     
     <script type="text/javascript">
       function setTitle() {
-        parent.document.title="[% title %]";
+        parent.document.title="Help ([% title %])";
       }
     </script>
   </head>
