--- a/idldoc/src/templates/all-files.tt
+++ b/idldoc/src/templates/all-files.tt
@@ -26,7 +26,7 @@
     <h1>All files</h1>
   
   	[% IF n_pro_files gt 0 %]
-    <h1>.pro files</h1>
+    <h1>.pro files &nbsp;&nbsp; <span>[% n_pro_files %] files</span></h1>
     	<ul>
     		[% FOREACH f IN pro_files %]
     		  <li>[% SCOPE f %]<a href="[% location %][% local_url %]" target="main_frame">[% basename %]</a>[% END %]</li>
@@ -35,7 +35,7 @@
     [% END %]
     
     [% IF n_sav_files gt 0 %]
-    <h1>.sav files</h1>
+    <h1>.sav files &nbsp;&nbsp; <span>[% n_sav_files %] files</span></h1>
       <ul>
         [% FOREACH f IN sav_files %]
           <li>[% SCOPE f %]<a href="[% location %][% local_url %]" target="main_frame">[% basename %]</a>[% END %]</li>
@@ -44,7 +44,7 @@
     [% END %]
     
     [% IF n_idldoc_files %]
-    <h1>.idldoc files</h1>
+    <h1>.idldoc files &nbsp;&nbsp; <span>[% n_idldoc_files %] files</span></h1>
       <ul>
         [% FOREACH f IN idldoc_files %]
           <li>[% SCOPE f %][% basename %][% END %]</li>
