--- a/idldoc/src/resources/main.css
+++ b/idldoc/src/resources/main.css
@@ -39,7 +39,7 @@ table.navbar { background: #B0E020; margin: 0; padding: 0; border-bottom: 1px #3
 table.navbar td { padding: 4px 0.5em 3px 0.5em; }
 table.navbar td.flexible { width: 100%; text-align: right; padding-right: 1em; }
 table.navbar td.selected { background: #384806; }
-table.navbar td.selected a { color: white; }
+table.navbar td.selected, table.navbar td.selected a { color: white; }
 table.navbar a:hover, table.navbar a:focus { background: inherit; border-bottom: 1px solid #303099; }
 p.localnavbar { text-align: right; margin: 0.2em 1em 0.2em 0.2em; padding: 0; }
 
