Fixed issue with batch files (i.e. no routines); add 'All files' link to dir-listing.

--- a/idldoc/src/templates/dir-listing.tt
+++ b/idldoc/src/templates/dir-listing.tt
@@ -26,6 +26,7 @@
     <h1>Directories</h1>
     
       <ul>
+        <li><a href="all-files.html" target="files_frame">All files</a></li>
         [% FOREACH d IN dirs %][% SCOPE d %]
         <li><a href="[% url %]dir-files.html" target="files_frame">[% location %]</a></li>
         [% END %][% END %]
