--- a/idldoc/src/resources/listing.css
+++ b/idldoc/src/resources/listing.css
@@ -8,7 +8,11 @@ body { font-family: Helvetica, sans-serif; font-size: 10pt; margin: 0; }
 
 /* headings */
 h1 { font-size: 100%; margin-bottom: 0.5em; padding-left: 0.5em; }
-h1 span { font-size: 80%; font-samily: Verdana, Helvetica, sans-serif; font-weight: normal; }
+h1 span { 
+  font-size: 80%; 
+  font-samily: Verdana, Helvetica, sans-serif; 
+  font-weight: normal; 
+}
 
 /* list items */
 ul { font-size: 90%; padding: 0em 1em 0em 1.5em; margin-top: 0; }
