--- a/idldoc/src/templates/idldoc-header.tt
+++ b/idldoc/src/templates/idldoc-header.tt
@@ -45,4 +45,4 @@
   </tr>
 </table>
 
-<p class="localnavbar smaller">single page | use frames &nbsp;&nbsp;&nbsp; summary &nbsp;&nbsp;&nbsp; class &nbsp;&nbsp;&nbsp; fields &nbsp;&nbsp;&nbsp; routine details &nbsp;&nbsp;&nbsp; statistics</p>
+<p class="localnavbar smallest">single page | use frames &nbsp;&nbsp;&nbsp; summary &nbsp;&nbsp;&nbsp; class &nbsp;&nbsp;&nbsp; fields &nbsp;&nbsp;&nbsp; routine details &nbsp;&nbsp;&nbsp; <a href="#attributes">attributes</a> &nbsp;&nbsp;&nbsp; statistics</p>
