--- a/idldoc/src/templates/profile.tt
+++ b/idldoc/src/templates/profile.tt
@@ -42,7 +42,7 @@
       [% IF n_routines gt 1 %]
         <dl class="routine-summary">
           [% FOREACH r IN routines %][% SCOPE r %]
-            <dt><code>[% IF is_function %]result = [% END %][% name %][% IF is_function %]([% END %][% IF n_parameters gt 0 %]p[% END %][% IF n_keywords gt 0 %]k[% END %][% IF is_function %])[% END %]</code></dt>
+            <dt><code>[% IF is_function %]result = [% END %][% name %][% IF n_parameters gt 0 %][% FOREACH p IN parameters %][% SCOPE p %][% prefix %][% name %][% suffix %][% END %][% END %][% END %][% IF n_keywords gt 0 %][% FOREACH k IN keywords %][% SCOPE k %][% prefix %][% name %]=[% name %][% suffix %][% END %][% END %][% END %]</code></dt>
             <dd class="small">Comments go here.</dd>
           [% END %][% END %]
         </dl>
@@ -53,17 +53,20 @@
     	[% END %]
     	
     	[% IF n_routines gt 0 %]
-    	<h2>Routines</h2>
+    	<div id="routine-details">
+    	  <h2>Routines</h2>
         
-          [% FOREACH r IN routines %][% SCOPE r %]
-            <div class="routine-detail">
-              <p><code>[% IF is_function %]result = [% END %][% name %][% IF is_function %]([% END %][% IF n_parameters gt 0 %]p[% END %][% IF n_keywords gt 0 %]k[% END %][% IF is_function %])[% END %]</code></p>
-            </div>            
-          [% END %][% END %]  
-          
+        [% FOREACH r IN routines %][% SCOPE r %]
+        <div class="routine-detail">
+          <p><code>[% IF is_function %]result = [% END %][% name %][% IF n_parameters gt 0 %][% FOREACH p IN parameters %][% SCOPE p %][% prefix %][% name %][% suffix %][% END %][% END %][% END %][% IF n_keywords gt 0 %][% FOREACH k IN keywords %][% SCOPE k %][% prefix %][% name %]=[% name %][% suffix %][% END %][% END %][% END %]</code></p>
+        </div>            
+        [% END %][% END %]
+            
+      </div>
       [% END %]
       
-      <h2 id="attributes">File attributes</h2>
+      <div id="attributes">
+        <h2>File attributes</h2>
         	
         <table class="attribute smaller">
           <tr>
@@ -80,7 +83,8 @@
             <td>Docformat:</td>
             <td>[% format %][% IF format ne '' %] [% END %][% markup %]</td>
           </tr>
-      </table> 
+        </table> 
+      </div>
       
     </div>
     
