--- a/idldoc/src/templates/overview.tt
+++ b/idldoc/src/templates/overview.tt
@@ -33,8 +33,8 @@
       <table class="attribute small">
         [% FOREACH d IN dirs %][% SCOPE d %]
         <tr>
-          <td><a href="[% url %]dir-overview.html">[% location %]</a></td>
-          <td></td>
+          <td class="name"><a href="[% url %]dir-overview.html">[% location %]</a></td>
+          <td>Comment goes here.</td>
         </tr>
         [% END %][% END %]
       </table>               
