--- a/idldoc/src/templates/profile.tt
+++ b/idldoc/src/templates/profile.tt
@@ -28,7 +28,7 @@
     </script>
   </head>
     
-  <body onload="setTitle();">
+  <body onload="setTitle();" id="root">
 
     [% INCLUDE_TEMPLATE idldoc_header_location %]
     
@@ -42,8 +42,8 @@
       [% IF n_routines gt 1 %]
         <dl class="routine-summary">
           [% FOREACH r IN routines %][% SCOPE r %]
-            <dt class="syntax"><code>[% IF is_function %]result = [% END %][% name %][% IF n_parameters gt 0 %][% FOREACH p IN parameters %][% SCOPE p %][% prefix %][% name %][% suffix %][% END %][% END %][% END %][% IF n_keywords gt 0 %][% FOREACH k IN keywords %][% SCOPE k %][% prefix %][% name %]=[% name %][% suffix %][% END %][% END %][% END %]</code></dt>
-            <dd class="small">Comments go here.</dd>
+            <dt class="syntax"><a href="#[% name %]"><code>[% IF is_function %]result = [% END %][% name %][% IF n_parameters gt 0 %][% FOREACH p IN parameters %][% SCOPE p %][% prefix %][% name %][% suffix %][% END %][% END %][% END %][% IF n_keywords gt 0 %][% FOREACH k IN keywords %][% SCOPE k %][% prefix %][% name %]=[% name %][% suffix %][% END %][% END %][% END %]</code></a></dt>
+            <dd class="smallest">Comments go here.</dd>
           [% END %][% END %]
         </dl>
       [% END %]
@@ -57,8 +57,16 @@
     	  [% IF n_routines gt 1 %]<h2>Routine details</h2>[% END %]
         
         [% FOREACH r IN routines %][% SCOPE r %]
-        <div class="routine-detail">
+        <div class="routine-details" id="[% name %]">
+        	<h3><a href="#root" class="top smallest">top</a>[% name %]</h3>
+        	
           <p class="syntax"><code>[% IF is_function %]result = [% END %][% name %][% IF n_parameters gt 0 %][% FOREACH p IN parameters %][% SCOPE p %][% prefix %][% name %][% suffix %][% END %][% END %][% END %][% IF n_keywords gt 0 %][% FOREACH k IN keywords %][% SCOPE k %][% prefix %][% name %]=[% name %][% suffix %][% END %][% END %][% END %]</code></p>
+          
+          <h4>Return value</h4>
+          <h4>Parameters</h4>
+          <h4>Keywords</h4>
+          <h4>Statistics</h4>
+          <h4>Other attributes</h4>
         </div>            
         [% END %][% END %]
             
